# Rusting-Frog

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
.sqlx/: query-03be0a3a17278bb3509b3b0345499d86871d97a7116e39a786c695ab34e5b2c6.json  query-0477930fde2f194ec96d8f3478897b2b1a6b13fa91974fba1a87ab70f06a5313.json  query-0cc67ed1412da4414105ba0a138bec76d6be4694cef0a517ed37a47685816b64.json  query-0f3db1b717f82ef122c43724d59945f1a86c128b716aab847dbc58d26a4580c7.json  query-15d7e5bdccf8b0ef359699dd9cebfd35eafb268e47d43b90a99301f0cdaf8cae.json  query-1aa6b00989d06a01dfa4be302ea0916a0a8a74618a5cec47657038b65f3cb28d.json  query-1e7137722ad9d0cfe451024a7dcdff09e6fb90930fba94bbb804ba1152107c23.json  query-25f8f67e73caf60f8de431212f6b7384f824783fb0b6929553e1622803572854.json  query-29b7d60eed70bfee4bd33a9c1647c3b180507bfe65c9da58cedba3a55b0858e2.json  query-2cffef9458cae48b07ec4cfd8552a0f2408988ec98a02dfd51a5a9343493c5b5.json  query-311e8cfa80ea68a1528fd5fa7273e693902ab1ac5f96106e2c1bc1e170aee6cd.json  query-357d5d5012b1cc5ba1c92e112bb944759a9bf0195b19622557f24b3e958c4b64.json  query-35ff5ed6ae8f3e4e6e27d5dc3cbf571ac0dde33690723c539b58b56635b379a1.json  query-3629a1ae7e722f2748c83ac3b9f282be5a357e1ccf12311e28f4a569819bb649.json  query-36639aa1feb006637e377effdc35b108d5657d8e4b2b9dfc4d7ec20c9aa12050.json  query-370a1a191c3b3ed600343b2033c77114d8c57407c7ccb25886c951a6429a38fd.json  query-3da6816092a684135cdf02960880c38ff904aa8b08d4173aa5b133fe8b10df7a.json  query-48afd707476cdb5c4a2558d40dfd87ef649910cea6cc79dfde408e74f87306a6.json  query-4a6233c2ce89b0bacd5d8586b2e3f51761f4e9a17eb12bf4f8ebce3c3b6a149e.json  query-4c9a3ef85b00a0f21b0597395eb296567f00c8e83b28bb4cdc485bc6d3b4057e.json  query-5b429537a139ed8ea097e0db1737b90038f12551c6bf7ebe3714f42632cdbd71.json  query-5e698ce99cf9739a582086338165fdf9873cdbbbd188169a26d4d9353131b029.json  query-60cb27b91cfd72b379589f8f79a746f74c80b5d0d2195c2fbe792b1b7b535eb2.json  query-625be74567b016468a7e3eb7123346b1aba33564b8bf1160f8a1cde8c4981d3d.json  query-650212a88143d56a0326460e719052eca9238f6a6c741c695fa59701f26b902d.json  query-6614545965fcabd49d461a33996765410072058df7b38b64c24644e612df6786.json  query-669e1e80f40492f9b6db9c9a492c77985b49cccb48c025deb2b856dc63ede6b1.json  query-66eccda6eee2d38f37e8907533cb02afd4f0eebbd5a41bda4d2148bd36b30758.json  query-690b2df7bfa1acd7f4b699b0ad172f88d5058eb0b9cb0648a6108087490b4ae2.json  query-695b6f01ec33c6c442db9b6fe0e7e9601c702a99b7c71742e29e53ba26e8ac0c.json  query-773af09b1eabab8d21868ee7a227740a11cbc04505f95c1875a6db9bf13795cf.json  query-78b443f1ec3f9ba7402591b952b1b0501897a5b7d0e8b861f1e8b778dbfce209.json  query-7b45f803a2db6bf7abbddde432a95ea8f3ebd29d49ff33a2a255b8190bf8872d.json  (+39 more)
UI/: .gitignore  Dockerfile  (+8 more)
crates/api/: Cargo.toml
crates/api/src/: app_state.rs  error.rs  main.rs
crates/api/src/extractors/: auth.rs
crates/api/src/middleware/: mod.rs
crates/api/src/routes/: catalog.rs  crawls.rs  debug.rs  dev.rs  issues.rs  mod.rs  projects.rs  reports.rs  urls.rs
crates/crawl-worker/: Cargo.toml
crates/crawl-worker/src/: debug_log.rs  fetcher.rs  frontier.rs  main.rs  parser.rs  pipeline.rs  robots.rs  sampler.rs  sitemap.rs
(+193 files in other folders)
