[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/crawl-worker",
    "crates/evaluators",
    "crates/migrations",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# HTTP client (crawler)
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "cookies"] }

# HTML parsing
scraper = "0.22"
lol_html = "2"

# Auth
jsonwebtoken = "9"

# IDs and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# URL handling
url = { version = "2", features = ["serde"] }

# Robots.txt
robotstxt = "0.3"

# XML (sitemaps)
quick-xml = "0.37"

# Config
dotenvy = "0.15"

# System metrics (RAM/disk) for the debug log sampler
sysinfo = "0.32"

# Futures combinators (join_all etc.) for concurrent fetches
futures = "0.3"

# Internal crates
sf-core = { path = "crates/core" }
sf-evaluators = { path = "crates/evaluators" }
