[package]
name = "sf-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sf-api"
path = "src/main.rs"

[dependencies]
sf-core.workspace = true
sf-evaluators.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
dotenvy.workspace = true
url.workspace = true
